package org.example.editionsInterfase;

public interface Calculatable {
    Double calculateCost(Object... additionalParams);
}
